[gd_scene load_steps=5 format=3 uid="uid://cpss4e8qujymo"]

[ext_resource type="Script" path="res://Resources/Runes/rune_class.gd" id="1_5lq60"]
[ext_resource type="Script" path="res://Scripts/Runes/Effects/golden_touch_effect.gd" id="2_tjki3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuuac"]
bg_color = Color(0.688023, 0.596125, 0.233008, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6sjqy"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="GoldenTouch" type="Node2D"]
script = ExtResource("1_5lq60")

[node name="Effect" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_tjki3")

[node name="RuneImage" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-9, -17, 9, -17, 17, -9, 17, 9, 9, 17, -9, 17, -17, 9, -17, -9)

[node name="RuneUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 14.0
mouse_filter = 2

[node name="ShopPanel" type="Panel" parent="RuneUI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -31.0
offset_top = 18.0
offset_right = -1.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yuuac")

[node name="ShopLabel" type="Label" parent="RuneUI/ShopPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="PopupPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
transparent_bg = true
size = Vector2i(21, 44)
theme_override_styles/panel = SubResource("StyleBoxFlat_6sjqy")

[node name="TooltipContainer" type="VBoxContainer" parent="PopupPanel"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
